--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -64,3 +64,18 @@ a{
 
 text-align: center;
 }
+
+.textoDisponible{
+    font-size:large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    color : darkgreen;
+}
+
+
+.textoNotDisponible{
+    font-size:large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    color : rgb(255, 0, 0);
+}
