--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -43,6 +43,8 @@ a{
 .contenedorHome{
     align-content: center;
     align-items: center;
+    width: "60%";
+
 }
 
 
@@ -78,4 +80,14 @@ text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     color : rgb(255, 0, 0);
+}
+
+
+.logo{
+    /* align-items:center ; */
+   /* align-content: center; */
+   /* height: 300px; */
+   border-radius: 14px;
+   padding: 4px;
+
 }
