--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -31,7 +31,7 @@ a{
 /************DEEFINIENDO CLASES ****************
 /**********************************************/
 
-.imagenes_home{
+.imagenes{
     align-items:center ;
    /* align-content: center; */
    /* height: 100px; */
