--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -92,3 +92,11 @@ text-align: center;
    padding: 4px;
 
 }
+
+.textoTotal{
+    font-size:large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    color : rgb(255, 0, 0);
+
+}
