--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -100,3 +100,13 @@ text-align: center;
     color : rgb(255, 0, 0);
 
 }
+
+
+.mensaje{
+    display:none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:medium;
+    font-weight: bold;
+    color: rgb(245, 52, 52);
+} 
