--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -110,3 +110,12 @@ text-align: center;
     font-weight: bold;
     color: rgb(245, 52, 52);
 } 
+
+.logoUser{
+        background-color: #717070 ;
+        width: auto;
+        border-radius: 6px;
+        /* padding: 2px; */
+        align-content:flex-start;
+        
+}
