--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -135,3 +135,25 @@ text-align: center;
         height: 30px;
 
     }
+
+/***********************************************/
+/******************* Media Queries *************/
+/***********************************************/
+
+
+/*X-Small devices (portrait phones, less than 576px)*/
+@media only screen and (max-width: 320px) {
+
+    main{
+
+        display: flex;
+        flex-flow:wrap;
+        justify-content:space-evenly;
+    }
+    
+    Footer {
+
+        align-items: center;
+        align-content: center;
+    }
+}
