--- a/src/css/mis_estilos.css
+++ b/src/css/mis_estilos.css
@@ -88,7 +88,7 @@ text-align: center;
     /* align-items:center ; */
    /* align-content: center; */
    /* height: 300px; */
-   border-radius: 14px;
+   /* border-radius: 14px; */
    padding: 4px;
 
 }
